crates/oxc_react_compiler/tests/snapshots/destructure-computed-string-literal-property-key.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-computed-string-literal-property-key.tsx
---
import { c as _c } from "react/compiler-runtime";
export const Example: FC<any> = (props) => {
	const $ = _c(2);
	const { "data-testid": testId } = props;
	let t0;
	if ($[0] !== testId) {
		t0 = <div data-testid={testId}>Hello</div>;
		$[0] = testId;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
};
