crates/oxc_react_compiler/tests/snapshots/destructure-default-array-with-unary.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-default-array-with-unary.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	const [t0] = props.value;
	let t1;
	if ($[0] !== t0) {
		t1 = t0 === undefined ? [-1, 1] : t0;
		$[0] = t0;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	const x = t1;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: [] }]
};
