crates/oxc_react_compiler/tests/snapshots/destructure-direct-reassignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-direct-reassignment.js
---
// @enablePreserveExistingMemoizationGuarantees:false
function foo() {}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
