crates/oxc_react_compiler/tests/snapshots/destructure-in-branch-ssa.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-in-branch-ssa.ts
---
function useFoo() {}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		x: "hello",
		y: "world",
		doDestructure: true
	}]
};
