crates/oxc_react_compiler/tests/snapshots/destructure-mixed-property-key-types.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-mixed-property-key-types.js
---
import { c as _c } from "react/compiler-runtime";
function foo() {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {
			"data-foo-bar": 1,
			a: 2,
			data: 3
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const { "data-foo-bar": x, a: y, data: z } = t0;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = [
			x,
			y,
			z
		];
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
