crates/oxc_react_compiler/tests/snapshots/destructure-object-declaration-to-context-var.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-object-declaration-to-context-var.js
---
import { c as _c } from "react/compiler-runtime";
import { identity } from "shared-runtime";
function Component(props) {
	const $ = _c(4);
	let x;
	if ($[0] !== props) {
		const { x: t0 } = props;
		x = t0;
		const foo = () => {
			x = identity(props.x);
		};
		foo();
		$[0] = props;
		$[1] = x;
	} else {
		x = $[1];
	}
	let t0;
	if ($[2] !== x) {
		t0 = { x };
		$[2] = x;
		$[3] = t0;
	} else {
		t0 = $[3];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ x: 42 }]
};
