crates/oxc_react_compiler/tests/snapshots/destructure-object-param-to-context-var.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-object-param-to-context-var.js
---
import { c as _c } from "react/compiler-runtime";
import { identity } from "shared-runtime";
function Component(t0) {
	const $ = _c(2);
	let t1;
	if ($[0] !== t0) {
		const { x: t2 } = t0;
		let x = t2;
		x = identity(x);
		const read = () => x;
		t1 = read();
		$[0] = t0;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ x: 42 }]
};
