crates/oxc_react_compiler/tests/snapshots/destructure-param-string-literal-key-invalid-identifier.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-param-string-literal-key-invalid-identifier.js
---
function foo(t0) {
	const { "data-foo-bar": dataTestID } = t0;
	return dataTestID;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [{ "data-foo-bar": {} }],
	isComponent: false
};
