crates/oxc_react_compiler/tests/snapshots/destructure-param-string-literal-key.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/destructure-param-string-literal-key.js
---
function foo(t0) {
	const { data: dataTestID } = t0;
	return dataTestID;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [{ data: {} }],
	isComponent: false
};
